--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
 
   "extends": ["airbnb", "prettier", "prettier/react"],
 
-  "plugins": ["react", "flowtype", "jsx-a11y", "import", "prettier"],
+  "plugins": ["react", "react-hooks", "jsx-a11y", "import", "prettier"],
 
   "rules": {
     "prettier/prettier": ["error"],
@@ -13,6 +13,16 @@
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
 
     "react/prefer-stateless-function": [0, { "ignorePureComponents": true }],
+
+    "react-hooks/rules-of-hooks": "error",
+
+    "no-unused-expressions": [
+      "warn",
+      {
+        "allowShortCircuit": true,
+        "allowTernary": true
+      }
+    ],
 
     "react/forbid-prop-types": [0, { "forbid": [] }],
 
