--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "0.60.5",
     "react-navigation": "^3.11.1",
     "react-redux": "^7.1.0",
+    "recompose": "^0.30.0",
     "redux": "^4.0.4",
     "redux-actions": "^2.6.5",
     "redux-saga": "^1.0.5"
@@ -30,6 +31,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "husky": "^3.0.3",
     "jest": "^24.8.0",
     "lint-staged": "^9.2.1",
