--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "moment": "^2.24.0",
     "react": "16.8.6",
     "react-native": "0.60.5",
+    "react-native-elements": "^1.1.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1",
     "react-redux": "^7.1.0",
     "recompose": "^0.30.0",
