--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
     "redux-actions": "^2.6.5",
-    "redux-saga": "^1.0.5"
+    "redux-saga": "^1.0.5",
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
